# NewBot1

./: .env  .gitignore  .replit  GITHUB_SETUP.md  LICENSE  README.md  admin_bot.py  auth_users.db  backend.py  backend_broken.py  backend_data.db  backend_new.py  backup.sql  backup_db.py  bot.py  bot_broken.py  bot_data.db  bot_old.py  bot_requirements.txt  database.py  dependencies.txt  index.html  migrate_logins.py  miniapp_index.html  models.py  pyproject.toml  readings.db  replit.md  run_services.py  script.js  start_bot.py  start_web.py  style.css  telegram_bot_complete.py
attached_assets/: README_1750224195026.md  index_1750224195026.html  readings_1750224195026.db  script_1750224195027.js  style_1750224195027.css  tgbotGOS_1750224195027.py  tgbot_1750224195027.py  user_mapping_1750224195028.db  данныепgos_1750224195028.py
static/: index.html  script.js
